themes/mlk/scss/imports/_hero.scss
.bg-container {
	background-image: url('../images/bg.jpg');
	background-color: white;
	background-repeat: no-repeat;
	background-position: 40% 0;

	.overlay-container{
		background: rgba(255, 255, 255, 0.47);
		height: 100%;
		@media screen and (min-width: $screen-sm){
			background: rgba(255,255, 255, 0.35);
		
		}

		@media screen and (min-width: $screen-md){
			background: none;
		}

	}

	@media screen and (min-width: $screen-sm){
		background-position: 55% 0;
		height: 550px;

	}
	@media screen and (min-width: $screen-lg){
		background-position: 50% 0;
		height: 600px;

	}

	@media screen and (min-width: 1400px){
		background-position: 50% 0;
		height: 760px;
	}

}
.hero-text-container{

	//background: rgba(226, 223, 255, 0.47);

	.tagline img {
		width: 100%;
		padding: 10px 0;

		@media screen and (min-width: $screen-sm){
			padding: 20px 0;
		}

		@media screen and (min-width: $screen-md){
			
			padding-top: 55px;
		}
	}

}

.hero-text {
	font-size: 1.5em;
	font-weight: bold;
	color: white;
	text-shadow: 0 2px 0 rgba(0,0,0,0.4);

	@media screen and (min-width: $screen-sm){
		font-size: 2em;
		
	}
	@media screen and (min-width: $screen-md){
		
	}

	.hero-links{
		clear: both;
		margin-top: 5%;
		float: right;
		width: 75%;
		text-align: center;



		a {
			color: white;
			text-transform: uppercase;
			display: block;
			margin: 1%;
			padding: 1%;
			@media screen and (min-width: $screen-sm){
				background: $blue;
				display: inline-block;
			}


		}

		.soon {
			float: right;
			margin: 1%;
			text-align: center;
		}

	}


}

.hero-text.left{
	@media screen and (min-width: $screen-sm){
		margin-top: 0.3em;
		float: left;
	}
}

.hero-text.right {
	@media screen and (min-width: $screen-sm){
		float: right;
		line-height: 1.2;
		margin-top: 75px;
	}

	img {
		max-width: 75%;
		float: right;
		@media screen and (min-width: $screen-sm){
			margin-top: 5%;
		}

	}
}

.hero-text {

	.ideas {
		display: block;
	}

	.date, .location {
		display: block;

	}


	.date {	
		color: white;
		font-size: 0.6em;
		@media screen and (min-width: $screen-sm){
			text-align: right;
		}
		@media screen and (min-width: $screen-md){
			font-size: 0.7em
		}
	}

	.location {
		font-size: 0.4em;

		@media screen and (min-width: $screen-md){
			font-size: 0.5em;
			text-align: right;
		}
	}


}

